@@ -19,6 +19,9 @@ Changes in Version 0.6-12
 
  o marginal.plot() now has a default cut = 0.
 
+ o simpleSmoothTs() and panel.tskernel() used an incorrect (reversed)
+   filter in the case of sides = 1 and c > 1.
+
  o as.layer() was not keeping existing scales if x.same or y.same = FALSE.
 
  o the 'style' argument to layer() now applies to the "superpose" styles
